// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic snapshot 1`] = `
<div
  class="css-6bfax7-Container e1i2ck7j0"
  height="100%"
  width="100%"
>
  <div>
    <div />
    <div />
    <div />
  </div>
</div>
`;

exports[`width / height snapshot 1`] = `
<div
  class="css-p81u5y-Container e1i2ck7j0"
  height="40px"
  width="120px"
>
  <div>
    <div />
    <div />
    <div />
  </div>
</div>
`;
